--- a/_includes/head.html
+++ b/_includes/head.html
@@ -51,8 +51,8 @@
     <![endif]-->
 
     <!-- ga & ba script hoook -->
-     
+
     <!-- add_by_huangxb -->
-    <link rel="stylesheet" href="css/custom-huangxb.css">
+    <link rel="stylesheet" href="{{ "/css/custom-huangxb.css" | prepend: site.baseurl }}">
     <script></script>
 </head>
