--- a/css/custom-huangxb.css
+++ b/css/custom-huangxb.css
@@ -1,11 +1,8 @@
-/* 控制导航栏整体字体大小 */
 .navbar {
-  font-size: 36px; /* 你想要的字号 */
+  font-size: 36px !important;
 }
-
-/* 控制导航栏右侧菜单项（如HOME、GROUPS）的字体大小和颜色 */
 .navbar-nav > li > a {
-  font-size: 36px; /* 你想要的字号 */
-  color: #1976d2;  /* 你想要的颜色 */
-  font-weight: bold;
+  font-size: 36px !important;
+  color: #1976d2 !important;
+  font-weight: bold !important;
 }
