--- a/css/custom-huangxb.css
+++ b/css/custom-huangxb.css
@@ -1,11 +1,11 @@
 .navbar {
   font-size: 24px !important;
 }
-/* .navbar-nav > li > a {
-  font-size: 36px !important;
-  color: #1976d2 !important;
-  font-weight: bold !important;
-} */
+.navbar-nav > li > a {
+  font-size: 24px !important;
+  /* color: #1976d2 !important; */
+  /* font-weight: bold !important; */
+}
 
 /* .navbar-nav > li > a {
   padding-top: 10px !important;
