--- a/css/custom-huangxb.css
+++ b/css/custom-huangxb.css
@@ -1,16 +1,17 @@
-.navbar {
+/* .navbar {
   font-size: 24px !important;
 }
 .navbar-nav > li > a {
   font-size: 24px !important;
-  /* color: #1976d2 !important; */
-  /* font-weight: bold !important; */
-}
+  color: #1976d2 !important;
+  font-weight: bold !important;
+} */
 
-/* .navbar-nav > li > a {
+.navbar-nav > li > a {
   padding-top: 10px !important;
   padding-bottom: 10px !important;
   line-height: 20px !important;
+  font-size: 24px !important;
 }
 @media (min-width: 768px) {
   .navbar-nav {
@@ -23,21 +24,26 @@
   .navbar-nav > li > a {
     padding-top: 15px !important;
     padding-bottom: 15px !important;
+    font-size: 24px !important;
   }
 }
 .navbar-default .navbar-nav > li > a {
   color: #777 !important;
+  font-size: 24px !important;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
   color: #333 !important;
   background-color: transparent !important;
+  font-size: 24px !important;
 }
 .navbar-inverse .navbar-nav > li > a {
   color: #9d9d9d !important;
+  font-size: 24px !important;
 }
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
   color: #fff !important;
   background-color: transparent !important;
-} */
+  font-size: 24px !important;
+}
