--- a/css/custom-huangxb.css
+++ b/css/custom-huangxb.css
@@ -1,11 +1,11 @@
-.navbar {
+/* .navbar {
   font-size: 20px !important;
 }
 .navbar-nav > li > a {
   font-size: 20px !important;
-  /* color: #1976d2 !important;
-  font-weight: bold !important; */
-}
+  color: #1976d2 !important;
+  font-weight: bold !important;
+} */
 
 /* .navbar-nav > li > a {
   padding-top: 10px !important;
@@ -40,27 +40,31 @@
 .navbar-inverse .navbar-nav > li > a:focus {
   color: #fff !important;
   background-color: transparent !important;
-}
+} */
 
 
 
 .navbar-default .navbar-nav > li > a {
   color: #000 !important;
+  font-size: 20px !important;
 }
 .navbar-default .navbar-nav > li.active > a,
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: #1976d2 !important;
+  /* color: #1976d2 !important; */
+  color: transparent !important;
   background-color: transparent !important;
+  font-size: 20px !important;
 }
-
 
 .navbar-inverse .navbar-nav > li > a {
   color: #fff !important;
+  font-size: 20px !important;
 }
 .navbar-inverse .navbar-nav > li.active > a,
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
-  color: #ccc !important;
+  color: #333 !important;
   background-color: transparent !important;
-} */
+  font-size: 20px !important;
+}
