--- a/css/custom-huangxb.css
+++ b/css/custom-huangxb.css
@@ -51,8 +51,7 @@
 .navbar-default .navbar-nav > li.active > a,
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  /* color: #1976d2 !important; */
-  color: transparent !important;
+  color: #1976d2 !important;
   background-color: transparent !important;
   font-size: 20px !important;
 }
