--- a/css/custom-huangxb.css
+++ b/css/custom-huangxb.css
@@ -45,7 +45,7 @@
 
 
 .navbar-default .navbar-nav > li > a {
-  color: #000 !important;
+  color: #fff !important;
   font-size: 20px !important;
 }
 .navbar-default .navbar-nav > li.active > a,
