--- a/css/custom-huangxb.css
+++ b/css/custom-huangxb.css
@@ -1,69 +1,44 @@
-/* .navbar {
-  font-size: 20px !important;
-}
-.navbar-nav > li > a {
-  font-size: 20px !important;
-  color: #1976d2 !important;
-  font-weight: bold !important;
-} */
-
-/* .navbar-nav > li > a {
-  padding-top: 10px !important;
-  padding-bottom: 10px !important;
-  line-height: 20px !important;
-}
-@media (min-width: 768px) {
-  .navbar-nav {
-    float: left !important;
-    margin: 0 !important;
-  }
-  .navbar-nav > li {
-    float: left !important;
-  }
-  .navbar-nav > li > a {
-    padding-top: 15px !important;
-    padding-bottom: 15px !important;
-  }
-}
-.navbar-default .navbar-nav > li > a {
-  color: #777 !important;
-}
-.navbar-default .navbar-nav > li > a:hover,
-.navbar-default .navbar-nav > li > a:focus {
-  color: #333 !important;
-  background-color: transparent !important;
-}
+/* 导航栏字体大小和基础样式 */
+.navbar-default .navbar-nav > li > a,
 .navbar-inverse .navbar-nav > li > a {
-  color: #9d9d9d !important;
+  font-size: 20px !important;
+  transition: color 0.2s;
 }
-.navbar-inverse .navbar-nav > li > a:hover,
-.navbar-inverse .navbar-nav > li > a:focus {
-  color: #fff !important;
-  background-color: transparent !important;
-} */
 
-
-
+/* 页面顶端时：默认白色，选中蓝色 */
 .navbar-default .navbar-nav > li > a {
   color: #fff !important;
-  font-size: 20px !important;
 }
 .navbar-default .navbar-nav > li.active > a,
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
   color: #1976d2 !important;
   background-color: transparent !important;
-  font-size: 20px !important;
 }
 
 .navbar-inverse .navbar-nav > li > a {
   color: #fff !important;
-  font-size: 20px !important;
 }
 .navbar-inverse .navbar-nav > li.active > a,
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
-  color: #333 !important;
+  color: #1976d2 !important;
   background-color: transparent !important;
-  font-size: 20px !important;
+}
+
+/* 页面滚动后：字体黑色，选中蓝色 */
+.navbar.navbar-scrolled .navbar-nav > li > a {
+  color: #000 !important;
+}
+.navbar.navbar-scrolled .navbar-nav > li.active > a,
+.navbar.navbar-scrolled .navbar-nav > li > a:hover,
+.navbar.navbar-scrolled .navbar-nav > li > a:focus {
+  color: #1976d2 !important;
+  background-color: transparent !important;
+}
+
+/* 导航栏内边距等细节 */
+.navbar-nav > li > a {
+  padding-top: 15px !important;
+  padding-bottom: 15px !important;
 }
