--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,20 @@
 <img src="/img/apple-touch-icon.png" width="0" height="0" />
 <!-- Migrate from head to bottom, no longer block render and still work -->
 
+<!-- add_by_huangxb -->
+<script>
+window.addEventListener('scroll', function() {
+  var navbar = document.querySelector('.navbar');
+  if (navbar) {
+    if (window.scrollY > 0) {
+      navbar.classList.add('navbar-scrolled');
+    } else {
+      navbar.classList.remove('navbar-scrolled');
+    }
+  }
+});
+</script>
+
 </body>
 
 </html>
